新宿テスト追加

--- a/stampcard.html
+++ b/stampcard.html
@@ -83,11 +83,11 @@
 
 <script>
     // 10箇所の設定
-    // 緯度・経度はGoogleマップから取得した形式で入力
+    // 緯度・経度はGoogleマップから取得した形式で入力　35.69243279765308, 139.69716272339323
     const targets = {
         "1": { name: "徳丸1丁目(テスト)", lat: 35.7725, lng: 139.6615, url: "https://palanar.app/v2/ar_contents/copy_2c9648ec4f1ee40a" },
         "2": { name: "東京駅付近", lat: 35.6812, lng: 139.7671, url: "https://www.tokyostationcity.com" },
-        "3": { name: "地点3", lat: 35.0000, lng: 139.0000, url: "#" },
+        "3": { name: "新宿（TEST)", lat: 35.69243279765308, lng: 139.69716272339323, url: "https://palanar.app/v2/ar_contents/copy_2c9648ec4f1ee40a" },
         "4": { name: "地点4", lat: 35.0000, lng: 139.0000, url: "#" },
         "5": { name: "地点5", lat: 35.0000, lng: 139.0000, url: "#" },
         "6": { name: "地点6", lat: 35.0000, lng: 139.0000, url: "#" },
