--- a/AR_stPatric.html
+++ b/AR_stPatric.html
@@ -83,3 +83,146 @@
         .custom-marker { font-size: 24px; text-align: center; line-height: 1; }
     </style>
 </head>
+<body>
+
+<div class="container">
+    <h1>☘️ Shamrock Rally ☘️</h1>
+    
+    <div id="map"></div>
+    <div id="status">位置情報を取得中...</div>
+    <button class="check-btn" onclick="checkLocation()">現在地でスタンプ！</button>
+
+    <div class="stamp-grid" id="stamp-grid"></div>
+
+    <div id="bonus-area">
+        <h3 style="margin:0">🎊 特典解放 🎊</h3>
+        <div id="bonus-content"></div>
+    </div>
+</div>
+
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+<script>
+    // 10箇所の設定
+    const targets = {
+        "1": { name: "徳丸1丁目(テスト)", lat: 35.7725, lng: 139.6615, url: "https://palanar.com/ar_contents/ifo2026_1" },
+        "2": { name: "東京駅付近", lat: 35.6812, lng: 139.7671, url: "https://www.tokyostationcity.com" },
+        "3": { name: "新宿（TEST)", lat: 35.6924, lng: 139.6971, url: "https://palanar.app/v2/ar_contents/copy_2c9648ec4f1ee40a" },
+        "4": { name: "地点4", lat: 35.7000, lng: 139.7000, url: "#" },
+        "5": { name: "地点5", lat: 35.7100, lng: 139.7100, url: "#" },
+        "6": { name: "地点6", lat: 35.7200, lng: 139.7200, url: "#" },
+        "7": { name: "地点7", lat: 35.7300, lng: 139.7300, url: "#" },
+        "8": { name: "地点8", lat: 35.7400, lng: 139.7400, url: "#" },
+        "9": { name: "地点9", lat: 35.7500, lng: 139.7500, url: "#" },
+        "10": { name: "ゴール", lat: 35.7600, lng: 139.7600, url: "#" }
+    };
+
+    let map, userMarker;
+    let markers = {};
+    const storageKey = 'rally_stpatty_2026_v3';
+
+    // 初期化
+    function init() {
+        // グリッド生成
+        const grid = document.getElementById('stamp-grid');
+        for (let i = 1; i <= 10; i++) {
+            const div = document.createElement('div');
+            div.id = `stamp-${i}`;
+            div.className = 'stamp';
+            div.innerHTML = `<span>${targets[i].name}</span>
+                             <a href="${targets[i].url}" id="link-${i}" class="link-button" target="_blank">Open AR!</a>`;
+            grid.appendChild(div);
+        }
+
+        // マップ初期化
+        map = L.map('map').setView([targets["1"].lat, targets["1"].lng], 13);
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+
+        // マーカー設置
+        for (let id in targets) {
+            markers[id] = L.marker([targets[id].lat, targets[id].lng], {
+                icon: L.divIcon({ className: 'custom-marker', html: '⚪', iconSize: [30, 30] })
+            }).addTo(map).bindPopup(targets[id].name);
+        }
+        userMarker = L.circleMarker([0,0], { color: 'blue', radius: 7 }).addTo(map);
+
+        updateDisplay();
+        startTracking();
+    }
+
+    function startTracking() {
+        if (navigator.geolocation) {
+            navigator.geolocation.watchPosition(pos => {
+                const { latitude, longitude } = pos.coords;
+                userMarker.setLatLng([latitude, longitude]);
+            }, null, { enableHighAccuracy: true });
+        }
+    }
+
+    function checkLocation() {
+        document.getElementById("status").innerText = "位置を計算中...";
+        navigator.geolocation.getCurrentPosition(pos => {
+            const { latitude, longitude } = pos.coords;
+            let found = false;
+            for (let id in targets) {
+                const dist = getDistance(latitude, longitude, targets[id].lat, targets[id].lng);
+                if (dist < 0.5) { // 500m以内
+                    saveStamp(id);
+                    found = true;
+                }
+            }
+            if (found) alert("☘️ おめでとう！スタンプをゲットしました！");
+            else alert("範囲内にスポットが見つかりません。");
+            updateDisplay();
+        });
+    }
+
+    function getDistance(lat1, lng1, lat2, lng2) {
+        const R = 6371;
+        const dLat = (lat2 - lat1) * Math.PI / 180;
+        const dLng = (lng2 - lng1) * Math.PI / 180;
+        const a = Math.sin(dLat/2)**2 + Math.cos(lat1*Math.PI/180)*Math.cos(lat2*Math.PI/180)*Math.sin(dLng/2)**2;
+        return R * 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
+    }
+
+    function saveStamp(id) {
+        let stamps = JSON.parse(localStorage.getItem(storageKey)) || [];
+        if (!stamps.includes(id)) {
+            stamps.push(id);
+            localStorage.setItem(storageKey, JSON.stringify(stamps));
+        }
+    }
+
+    function updateDisplay() {
+        let stamps = JSON.parse(localStorage.getItem(storageKey)) || [];
+        
+        stamps.forEach(id => {
+            document.getElementById("stamp-" + id)?.classList.add("active");
+            document.getElementById("link-" + id).style.display = "inline-block";
+            if (markers[id]) {
+                markers[id].setIcon(L.divIcon({ className: 'custom-marker', html: '☘️', iconSize: [30, 30] }));
+            }
+        });
+
+        const count = stamps.length;
+        document.getElementById("status").innerText = `スタンプ取得数: ${count} / 10`;
+
+        const bonusArea = document.getElementById("bonus-area");
+        const bonusContent = document.getElementById("bonus-content");
+
+        if (count >= 5) {
+            bonusArea.style.display = "block";
+            if (count < 10) {
+                bonusContent.innerHTML = `<p>☘️ 5個達成！中間プレゼント！</p>
+                                         <a href="https://example.com/halfway" class="bonus-link" target="_blank">中間特典を受け取る</a>`;
+            } else {
+                bonusContent.innerHTML = `<p>🌈 コンプリート達成！ 🌈</p>
+                                         <a href="https://example.com/complete" class="bonus-link" target="_blank" style="background:#e74c3c;">【究極】コンプリート賞品へ</a>`;
+            }
+        }
+    }
+
+    window.onload = init;
+</script>
+</body>
+</html>
