--- a/AR_stPatric.html
+++ b/AR_stPatric.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>St. Patrick's Day Stamp Rally</title>
+    <title>St. Patrick's Day Rally</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <style>
         :root {
@@ -15,72 +15,86 @@
 
         body { 
             font-family: 'Hiragino Kaku Gothic ProN', sans-serif; 
-            background-color: var(--cream); 
-            color: var(--dark-green); 
-            margin: 0; padding: 15px;
+            background-color: var(--cream); color: var(--dark-green); 
+            margin: 0; padding: 10px;
         }
 
         .container { 
-            max-width: 500px; margin: 0 auto; 
-            border: 4px double var(--gold);
-            padding: 15px; background: white; border-radius: 15px;
-            box-sizing: border-box;
+            max-width: 500px; margin: 0 auto; background: white;
+            border: 4px double var(--gold); border-radius: 15px;
+            padding: 15px; box-sizing: border-box;
         }
 
-        h1 { text-align: center; color: var(--irish-green); margin-top: 0; font-size: 1.4rem; }
+        h1 { text-align: center; color: var(--irish-green); font-size: 1.3rem; margin-top: 0; }
 
-        /* マップ */
         #map { 
-            height: 280px; width: 100%; border-radius: 12px; 
+            height: 250px; width: 100%; border-radius: 12px; 
             margin-bottom: 15px; border: 2px solid var(--irish-green);
-            z-index: 1;
         }
 
-        /* ステータスとボタン */
-        #status { text-align: center; font-weight: bold; margin-bottom: 10px; font-size: 14px; }
         .check-btn { 
             width: 100%; padding: 16px; font-size: 1.1rem; font-weight: bold;
             cursor: pointer; background: var(--irish-green); color: white; 
-            border: none; border-radius: 50px; 
-            box-shadow: 0 4px 0 var(--dark-green);
-            transition: 0.2s; margin-bottom: 20px;
+            border: none; border-radius: 50px; box-shadow: 0 4px 0 var(--dark-green);
+            margin-bottom: 20px;
         }
         .check-btn:active { transform: translateY(2px); box-shadow: none; }
 
-        /* スタンプグリッド (2列) */
+        /* --- 3x3 グリッド --- */
         .stamp-grid { 
-            display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px; 
+            display: grid; 
+            grid-template-columns: repeat(3, 1fr); /* 3列に変更 */
+            gap: 8px; 
+            margin-bottom: 15px;
         }
+
         .stamp { 
-            background: #fff; border: 2px dashed var(--irish-green);
-            border-radius: 10px; padding: 12px 5px; text-align: center;
+            background: #fff; border: 1.5px dashed var(--irish-green);
+            border-radius: 8px; padding: 10px 2px; text-align: center;
             display: flex; flex-direction: column; align-items: center; justify-content: center;
-            min-height: 100px; box-sizing: border-box;
+            min-height: 90px; box-sizing: border-box; transition: 0.3s;
         }
-        .stamp.active { border: 2px solid var(--irish-green); background: #e8f5e9; }
-        .stamp.active::before { content: '☘️'; font-size: 20px; }
-        .stamp span { font-size: 11px; font-weight: bold; margin: 5px 0; }
 
-        /* 個別ARリンクボタン */
+        /* --- 特別なゴール枠 --- */
+        .goal-container {
+            margin-top: 10px;
+            display: flex;
+            justify-content: center;
+        }
+        .stamp.goal {
+            width: 60%; /* ゴール枠を少し大きく */
+            border: 3px double var(--gold); /* ゴールドの二重線 */
+            background: #fffdf0;
+            min-height: 110px;
+        }
+        .stamp.goal span { font-size: 14px; color: #b8860b; }
+
+        /* アクティブ時のスタイル */
+        .stamp.active { border-style: solid; background: #e8f5e9; }
+        .stamp.active::before { content: '☘️'; font-size: 18px; }
+        .stamp.goal.active { background: #fff9c4; border-color: var(--gold); }
+        .stamp.goal.active::before { content: '🌈'; font-size: 24px; } /* ゴールは虹！ */
+
+        .stamp span { font-size: 10px; font-weight: bold; margin: 4px 0; line-height: 1.2; }
+
         .link-button {
-            display: none; padding: 4px 8px; background: var(--dark-green);
-            color: white; text-decoration: none; border-radius: 5px; font-size: 10px;
+            display: none; padding: 3px 6px; background: var(--dark-green);
+            color: white; text-decoration: none; border-radius: 4px; font-size: 9px;
         }
 
-        /* 特典エリア */
+        #status { text-align: center; font-weight: bold; margin-bottom: 10px; font-size: 14px; }
+        
         #bonus-area {
-            display: none; margin-top: 25px; padding: 15px;
+            display: none; margin-top: 20px; padding: 15px;
             background: linear-gradient(135deg, var(--gold) 0%, #fff 100%);
             border: 2px solid var(--gold); border-radius: 12px; text-align: center;
         }
         .bonus-link { 
-            display: block; margin-top: 10px; padding: 12px; 
-            background: var(--irish-green); color: white; 
-            text-decoration: none; border-radius: 8px; font-weight: bold;
+            display: block; margin-top: 10px; padding: 12px; background: var(--irish-green); 
+            color: white; text-decoration: none; border-radius: 8px; font-weight: bold;
         }
 
-        /* マップ上のアイコン */
-        .custom-marker { font-size: 24px; text-align: center; line-height: 1; }
+        .custom-marker { font-size: 24px; text-align: center; }
     </style>
 </head>
 <body>
@@ -92,7 +106,9 @@
     <div id="status">位置情報を取得中...</div>
     <button class="check-btn" onclick="checkLocation()">現在地でスタンプ！</button>
 
-    <div class="stamp-grid" id="stamp-grid"></div>
+    <div class="stamp-grid" id="stamp-grid-main"></div>
+
+    <div class="goal-container" id="goal-area"></div>
 
     <div id="bonus-area">
         <h3 style="margin:0">🎊 特典解放 🎊</h3>
@@ -100,129 +116,4 @@
     </div>
 </div>
 
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-
-<script>
-    // 10箇所の設定
-    const targets = {
-        "1": { name: "徳丸1丁目(テスト)", lat: 35.7725, lng: 139.6615, url: "https://palanar.com/ar_contents/ifo2026_1" },
-        "2": { name: "東京駅付近", lat: 35.6812, lng: 139.7671, url: "https://www.tokyostationcity.com" },
-        "3": { name: "新宿（TEST)", lat: 35.6924, lng: 139.6971, url: "https://palanar.app/v2/ar_contents/copy_2c9648ec4f1ee40a" },
-        "4": { name: "地点4", lat: 35.7000, lng: 139.7000, url: "#" },
-        "5": { name: "地点5", lat: 35.7100, lng: 139.7100, url: "#" },
-        "6": { name: "地点6", lat: 35.7200, lng: 139.7200, url: "#" },
-        "7": { name: "地点7", lat: 35.7300, lng: 139.7300, url: "#" },
-        "8": { name: "地点8", lat: 35.7400, lng: 139.7400, url: "#" },
-        "9": { name: "地点9", lat: 35.7500, lng: 139.7500, url: "#" },
-        "10": { name: "ゴール", lat: 35.7600, lng: 139.7600, url: "#" }
-    };
-
-    let map, userMarker;
-    let markers = {};
-    const storageKey = 'rally_stpatty_2026_v3';
-
-    // 初期化
-    function init() {
-        // グリッド生成
-        const grid = document.getElementById('stamp-grid');
-        for (let i = 1; i <= 10; i++) {
-            const div = document.createElement('div');
-            div.id = `stamp-${i}`;
-            div.className = 'stamp';
-            div.innerHTML = `<span>${targets[i].name}</span>
-                             <a href="${targets[i].url}" id="link-${i}" class="link-button" target="_blank">Open AR!</a>`;
-            grid.appendChild(div);
-        }
-
-        // マップ初期化
-        map = L.map('map').setView([targets["1"].lat, targets["1"].lng], 13);
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
-
-        // マーカー設置
-        for (let id in targets) {
-            markers[id] = L.marker([targets[id].lat, targets[id].lng], {
-                icon: L.divIcon({ className: 'custom-marker', html: '⚪', iconSize: [30, 30] })
-            }).addTo(map).bindPopup(targets[id].name);
-        }
-        userMarker = L.circleMarker([0,0], { color: 'blue', radius: 7 }).addTo(map);
-
-        updateDisplay();
-        startTracking();
-    }
-
-    function startTracking() {
-        if (navigator.geolocation) {
-            navigator.geolocation.watchPosition(pos => {
-                const { latitude, longitude } = pos.coords;
-                userMarker.setLatLng([latitude, longitude]);
-            }, null, { enableHighAccuracy: true });
-        }
-    }
-
-    function checkLocation() {
-        document.getElementById("status").innerText = "位置を計算中...";
-        navigator.geolocation.getCurrentPosition(pos => {
-            const { latitude, longitude } = pos.coords;
-            let found = false;
-            for (let id in targets) {
-                const dist = getDistance(latitude, longitude, targets[id].lat, targets[id].lng);
-                if (dist < 0.5) { // 500m以内
-                    saveStamp(id);
-                    found = true;
-                }
-            }
-            if (found) alert("☘️ おめでとう！スタンプをゲットしました！");
-            else alert("範囲内にスポットが見つかりません。");
-            updateDisplay();
-        });
-    }
-
-    function getDistance(lat1, lng1, lat2, lng2) {
-        const R = 6371;
-        const dLat = (lat2 - lat1) * Math.PI / 180;
-        const dLng = (lng2 - lng1) * Math.PI / 180;
-        const a = Math.sin(dLat/2)**2 + Math.cos(lat1*Math.PI/180)*Math.cos(lat2*Math.PI/180)*Math.sin(dLng/2)**2;
-        return R * 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
-    }
-
-    function saveStamp(id) {
-        let stamps = JSON.parse(localStorage.getItem(storageKey)) || [];
-        if (!stamps.includes(id)) {
-            stamps.push(id);
-            localStorage.setItem(storageKey, JSON.stringify(stamps));
-        }
-    }
-
-    function updateDisplay() {
-        let stamps = JSON.parse(localStorage.getItem(storageKey)) || [];
-        
-        stamps.forEach(id => {
-            document.getElementById("stamp-" + id)?.classList.add("active");
-            document.getElementById("link-" + id).style.display = "inline-block";
-            if (markers[id]) {
-                markers[id].setIcon(L.divIcon({ className: 'custom-marker', html: '☘️', iconSize: [30, 30] }));
-            }
-        });
-
-        const count = stamps.length;
-        document.getElementById("status").innerText = `スタンプ取得数: ${count} / 10`;
-
-        const bonusArea = document.getElementById("bonus-area");
-        const bonusContent = document.getElementById("bonus-content");
-
-        if (count >= 5) {
-            bonusArea.style.display = "block";
-            if (count < 10) {
-                bonusContent.innerHTML = `<p>☘️ 5個達成！中間プレゼント！</p>
-                                         <a href="https://example.com/halfway" class="bonus-link" target="_blank">中間特典を受け取る</a>`;
-            } else {
-                bonusContent.innerHTML = `<p>🌈 コンプリート達成！ 🌈</p>
-                                         <a href="https://example.com/complete" class="bonus-link" target="_blank" style="background:#e74c3c;">【究極】コンプリート賞品へ</a>`;
-            }
-        }
-    }
-
-    window.onload = init;
-</script>
-</body>
-</html>
+<script src="https://unpkg.com/leaflet@1.9.
