--- a/AR_stPatric.html
+++ b/AR_stPatric.html
@@ -119,9 +119,9 @@
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
     const targets = {
-        "1": { name: "地点1", lat: 35.7725, lng: 139.6615, url: "https://palanar.com/ar_contents/ifo2026_1" },
-        "2": { name: "地点2", lat: 35.6812, lng: 139.7671, url: "#" },
-        "3": { name: "地点3", lat: 35.6924, lng: 139.6971, url: "#" },
+        "1": { name: "徳丸1丁目(テスト)", lat: 35.7725, lng: 139.6615, url: "https://palanar.com/ar_contents/ifo2026_1" },
+        "2": { name: "東京駅付近", lat: 35.6812, lng: 139.7671, url: "https://www.tokyostationcity.com" },
+        "3": { name: "新宿（TEST)", lat: 35.6924, lng: 139.6971, url: "https://palanar.app/v2/ar_contents/copy_2c9648ec4f1ee40a" },
         "4": { name: "地点4", lat: 35.7000, lng: 139.7000, url: "#" },
         "5": { name: "地点5", lat: 35.7100, lng: 139.7100, url: "#" },
         "6": { name: "地点6", lat: 35.7200, lng: 139.7200, url: "#" },
