--- a/AR_stPatric.html
+++ b/AR_stPatric.html
@@ -102,6 +102,13 @@
 <div class="container">
     <h1>☘️ Shamrock Rally ☘️</h1>
     
+    <p class="description">
+        セントパトリックス・デーへようこそ！<br>
+        街の中に隠された10個のシャムロックを探しましょう。<br>
+        5個集めると素敵なプレゼント、コンプリートすると<br>
+        虹の麓の特別なギフトが待っています！
+    </p>
+    
     <div id="map"></div>
     <div id="status">位置情報を取得中...</div>
     <button class="check-btn" onclick="checkLocation()">現在地でスタンプ！</button>
