Add description styles to AR_stPatric.html
Added styles for description section in AR_stPatric.html

--- a/AR_stPatric.html
+++ b/AR_stPatric.html
@@ -26,7 +26,18 @@
         }
 
         h1 { text-align: center; color: var(--irish-green); font-size: 1.3rem; margin-top: 0; }
-
+    
+        /* --- 追加：説明文のスタイル --- */
+        .description {
+            text-align: center;
+            font-size: 0.85rem;
+            line-height: 1.5;
+            color: var(--dark-green);
+            margin-bottom: 20px;
+            padding: 0 10px;
+            border-bottom: 1px solid var(--cream);
+            padding-bottom: 15px;
+        }
         #map { 
             height: 250px; width: 100%; border-radius: 12px; 
             margin-bottom: 15px; border: 2px solid var(--irish-green);
