--- a/AR_stPatric.html
+++ b/AR_stPatric.html
@@ -163,4 +163,46 @@
         document.getElementById('modalBody').innerHTML = targets[id].description;
         document.getElementById('infoModal').style.display = 'flex';
     }
-    function
+    function closeModal() { document.getElementById('infoModal').style.display = 'none'; }
+
+    function checkLocation() {
+        navigator.geolocation.getCurrentPosition(pos => {
+            const { latitude, longitude } = pos.coords;
+            let found = false;
+            for (let id in targets) {
+                const dist = getDistance(latitude, longitude, targets[id].lat, targets[id].lng);
+                if (dist < 0.5) { saveStamp(id); found = true; }
+            }
+            if (found) { updateDisplay(); alert("☘️ スタンプ獲得！"); }
+            else alert("近くにスポットがありません。");
+        });
+    }
+
+    function getDistance(lat1, lng1, lat2, lng2) {
+        const R = 6371;
+        const dLat=(lat2-lat1)*Math.PI/180; const dLng=(lng2-lng1)*Math.PI/180;
+        const a=Math.sin(dLat/2)**2+Math.cos(lat1*Math.PI/180)*Math.cos(lat2*Math.PI/180)*Math.sin(dLng/2)**2;
+        return R*2*Math.atan2(Math.sqrt(a),Math.sqrt(1-a));
+    }
+
+    function saveStamp(id) {
+        let stamps = JSON.parse(localStorage.getItem(storageKey)) || [];
+        if (!stamps.includes(id)) { stamps.push(id); localStorage.setItem(storageKey, JSON.stringify(stamps)); }
+    }
+
+    function updateDisplay() {
+        let stamps = JSON.parse(localStorage.getItem(storageKey)) || [];
+        stamps.forEach(id => {
+            document.getElementById("stamp-" + id)?.classList.add("active");
+            const arLnk = document.getElementById("ar-link-" + id);
+            if (arLnk) arLnk.style.display = "block";
+            if (markers[id]) {
+                markers[id].setIcon(L.divIcon({ className: 'custom-marker', html: (id=="10"?'🌈':'☘️'), iconSize: [30, 30] }));
+            }
+        });
+        document.getElementById("status").innerText = `スタンプ: ${stamps.length} / 10`;
+    }
+    window.onload = init;
+</script>
+</body>
+</html>
