--- a/AR_stPatric.html
+++ b/AR_stPatric.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>St. Patrick's Full Quest</title>
+    <title>St. Patrick's Quest Rally</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <style>
         :root {
@@ -24,32 +24,33 @@
         .stamp-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 8px; margin-bottom: 15px; }
         .stamp { background: #fff; border: 1.5px dashed var(--irish-green); border-radius: 8px; padding: 8px 2px; text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: flex-start; min-height: 125px; box-sizing: border-box; }
         
-        /* ゴールのスタイル */
-        .stamp.goal { width: 75%; border: 3px double #ccc; background: #eee; min-height: 140px; color: #999; margin: 0 auto; }
-        .stamp.goal.ready { border-color: var(--gold); background: #fffdf0; color: var(--dark-green); border-style: double; }
-        .goal-container { margin-top: 10px; text-align: center; }
+        /* 10個目のゴールの特別なスタイル */
+        .stamp.goal { width: 70%; border: 3px double #ccc; background: #eee; min-height: 140px; color: #999; }
+        .stamp.goal.ready { border-color: var(--gold); background: #fffdf0; color: var(--dark-green); }
+        .goal-container { margin-top: 10px; display: flex; justify-content: center; }
         
         .btn-ui { display: block; width: 90%; padding: 6px 0; margin: 2px 0; border-radius: 4px; font-size: 9px; font-weight: bold; text-decoration: none; text-align: center; cursor: pointer; }
         .detail-btn { background: white; color: var(--dark-green); border: 1px solid var(--gold); }
         .ar-btn { background: var(--irish-green); color: white; border: none; display: none; }
 
-        .stamp.active { border-style: solid; background: #e8f5e9; color: var(--dark-green); }
+        .stamp.active { border-style: solid; background: #e8f5e9; }
         .stamp.active::before { content: '☘️'; font-size: 16px; }
         .stamp.goal.active::before { content: '🌈'; font-size: 22px; }
 
+        /* モーダル */
         .modal-overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); z-index: 1000; justify-content: center; align-items: center; }
         .modal-content { background-color: var(--parchment); width: 85%; max-width: 400px; padding: 20px; border-radius: 5px; border: 8px double var(--gold); position: relative; max-height: 85vh; overflow-y: auto; }
         .modal-close { position: absolute; top: 5px; right: 10px; font-size: 24px; cursor: pointer; }
-        .modal-image { width: 100%; height: 180px; object-fit: cover; border-radius: 5px; border: 2px solid var(--gold); margin: 10px 0; background: #ddd; }
+        .modal-image { width: 100%; height: 180px; object-fit: cover; border-radius: 5px; border: 2px solid var(--gold); margin: 10px 0; display: block; }
 
         #status { text-align: center; font-weight: bold; margin-bottom: 10px; font-size: 14px; }
-        .custom-marker { font-size: 26px; text-align: center; cursor: pointer; }
+        .custom-marker { font-size: 26px; text-align: center; }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <h2 style="text-align:center; color:var(--irish-green); margin:0 0 10px 0;">☘️ St. Patrick's Quest</h2>
+    <h2 style="text-align:center; color:var(--irish-green); margin-top:0;">☘️ Quest Rally</h2>
     <div id="map"></div>
     <div id="status">スタンプを集めよう！</div>
     <button class="check-btn" onclick="checkLocation()">現在地でスタンプ！</button>
@@ -70,7 +71,7 @@
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
     const targets = {
-        "1": { 
+       "1": { 
             name: "三つ葉の広場", lat: 35.7725, lng: 139.6615, arUrl: "#", 
             imgUrl: "https://images.unsplash.com/photo-1590076215667-873d3253503a?w=500", 
             description: "<b>【シャムロック】</b><br>三つ葉のクローバーはアイルランドの国花。聖パトリックがキリスト教を広める際、この葉を使って説明したと言われています。" 
@@ -120,10 +121,9 @@
             imgUrl: "https://images.unsplash.com/photo-1518005020951-ecc84916723f?w=500", 
             description: "<b>【コンプリート！】</b><br>すべてのスタンプを集め、アイルランドの知恵を学びました！虹の麓に隠された黄金の壺を手にする資格は、あなたの好奇心そのものです。" 
         }
-    };
 
     let map, markers = {};
-    const storageKey = 'rally_locked_goal_v2_full';
+    const storageKey = 'rally_locked_goal_v1';
 
     function init() {
         const gridMain = document.getElementById('stamp-grid-main');
@@ -134,10 +134,101 @@
             div.id = `stamp-${i}`;
             if (i === 10) {
                 div.className = 'stamp goal';
-                div.innerHTML = `<span id="goal-name" style="font-size:12px">🔒 9つの知恵を集めよ</span><div id="goal-btns" style="display:none;"><div class="btn-ui detail-btn" onclick="openModal('10')">🔍 解説</div><a href="#" class="btn-ui ar-btn" id="ar-link-10" target="_blank">☘️ AR</a></div>`;
+                div.innerHTML = `<span id="goal-name">🔒 ？？？</span><div id="goal-btns" style="display:none;"><div class="btn-ui detail-btn" onclick="openModal('10')">🔍 解説</div><a href="#" class="btn-ui ar-btn" id="ar-link-10" target="_blank">☘️ AR</a></div>`;
                 goalArea.appendChild(div);
             } else {
                 div.className = 'stamp';
+                div.innerHTML = `<span>${targets[i].name}</span><div class="btn-ui detail-btn" onclick="openModal('${i}')">🔍 解説</div><a href="#" id="ar-link-${i}" class="btn-ui ar-btn" target="_blank">☘️ AR</a>`;
+                gridMain.appendChild(div);
+            }
+        }
+
+        map = L.map('map').setView([targets["1"].lat, targets["1"].lng], 13);
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+
+        for (let id in targets) {
+            markers[id] = L.marker([targets[id].lat, targets[id].lng], {
+                icon: L.divIcon({ className: 'custom-marker', html: (id=="10"?'🔒':'📍'), iconSize: [30, 30] })
+            }).addTo(map).bindPopup(id=="10" ? "すべてのスタンプを集めると解放！" : targets[id].name);
+        }
+        updateDisplay();
+    }
+
+    function updateDisplay() {
+        let stamps = JSON.parse(localStorage.getItem(storageKey)) || [];
+        const count = stamps.length;
+        const mainCount = stamps.filter(id => id != "10").length;
+
+        // 一般スポットの更新
+        stamps.forEach(id => {
+            if(id == "10") return;
+            document.getElementById("stamp-" + id)?.classList.add("active");
+            document.getElementById("ar-link-" + id).style.display = "block";
+            markers[id].setIcon(L.divIcon({ className:'custom-marker', html:'☘️', iconSize:[30,30] }));
+        });
+
+        // ゴール解放判定 (10以外のスタンプが9個あるか)
+        const goalEl = document.getElementById("stamp-10");
+        if (mainCount >= 9) {
+            goalEl.classList.add("ready");
+            document.getElementById("goal-name").innerText = targets["10"].name;
+            document.getElementById("goal-btns").style.display = "block";
+            markers["10"].setIcon(L.divIcon({ className:'custom-marker', html:'🚩', iconSize:[30,30] }));
+            markers["10"].getPopup().setContent(targets["10"].name);
+        }
+
+        // ゴール済みの表示
+        if (stamps.includes("10")) {
+            goalEl.classList.add("active");
+            document.getElementById("ar-link-10").style.display = "block";
+            markers["10"].setIcon(L.divIcon({ className:'custom-marker', html:'🌈', iconSize:[30,30] }));
+        }
+
+        document.getElementById("status").innerText = `集めたスタンプ: ${mainCount} / 9`;
+    }
+
+    function checkLocation() {
+        navigator.geolocation.getCurrentPosition(pos => {
+            const { latitude, longitude } = pos.coords;
+            let stamps = JSON.parse(localStorage.getItem(storageKey)) || [];
+            const mainCount = stamps.filter(id => id != "10").length;
+            let foundId = null;
+
+            for (let id in targets) {
+                const dist = getDistance(latitude, longitude, targets[id].lat, targets[id].lng);
+                if (dist < 0.5) {
+                    if (id == "10" && mainCount < 9) {
+                        alert("まだゴールは開いていないよ！まずは他の9つのスタンプを集めてね。");
+                        return;
+                    }
+                    foundId = id;
+                    break;
+                }
+            }
+
+            if (foundId) {
+                saveStamp(foundId);
+                updateDisplay();
+                alert(foundId == "10" ? "🌈 ついにコンプリート！おめでとう！" : "☘️ スタンプ獲得！");
+            } else {
+                alert("近くにスポットがありません。");
+            }
+        });
+    }
+
+    function openModal(id) {
+        document.getElementById('modalTitle').innerText = targets[id].name;
+        document.getElementById('modalImg').src = targets[id].imgUrl;
+        document.getElementById('modalBody').innerHTML = targets[id].description;
+        document.getElementById('infoModal').style.display = 'flex';
+    }
+    function closeModal() { document.getElementById('infoModal').style.display = 'none'; }
+    function getDistance(lat1,lng1,lat2,lng2){const R=6371;const dLat=(lat2-lat1)*Math.PI/180;const dLng=(lng2-lng1)*Math.PI/180;const a=Math.sin(dLat/2)**2+Math.cos(lat1*Math.PI/180)*Math.cos(lat2*Math.PI/180)*Math.sin(dLng/2)**2;return R*2*Math.atan2(Math.sqrt(a),Math.sqrt(1-a));}
+    function saveStamp(id){let stamps=JSON.parse(localStorage.getItem(storageKey))||[];if(!stamps.includes(id)){stamps.push(id);localStorage.setItem(storageKey,JSON.stringify(stamps));}}
+    window.onload = init;
+</script>
+</body>
+</html>                div.className = 'stamp';
                 div.innerHTML = `<span>${targets[i].name}</span><div class="btn-ui detail-btn" onclick="openModal('${i}')">🔍 解説</div><a href="#" id="ar-link-${i}" class="btn-ui ar-btn" target="_blank">☘️ AR</a>`;
                 gridMain.appendChild(div);
             }
