Update title and AR URLs in AR_stPatric.html

--- a/AR_stPatric.html
+++ b/AR_stPatric.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>St. Patrick's Quest Rally</title>
+    <title>St. Patrick's Stamp Rally</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <style>
         :root {
@@ -81,12 +81,12 @@
 <script>
     const targets = {
         "1": { 
-            name: "三つ葉の広場", lat: 35.7725, lng: 139.6615, arUrl: "#", 
+            name: "三つ葉の広場", lat: 35.7725, lng: 139.6615, arUrl: "https://palanar.app/v2/ar_contents/ifo2026_2", 
             imgUrl: "https://images.unsplash.com/photo-1590076215667-873d3253503a?w=500", 
             description: "<b>【シャムロック】</b><br>三つ葉のクローバーはアイルランドの国花。聖パトリックがキリスト教を広める際、この葉を使って説明したと言われています。" 
         },
         "2": { 
-            name: "妖精の靴屋", lat: 35.6812, lng: 139.7671, arUrl: "#", 
+            name: "妖精の靴屋", lat: 35.6812, lng: 139.7671, arUrl: "https://palanar.app/v2/ar_contents/copy_2c9648ec4f1ee40a", 
             imgUrl: "https://images.unsplash.com/photo-1599839619722-397514112634?w=500", 
             description: "<b>【レプラコーン】</b><br>一人で黙々と靴を直す妖精。彼を捕まえれば黄金の場所を教えてくれますが、目を離した隙に逃げてしまう知恵者です。" 
         },
