--- a/AR_stPatric.html
+++ b/AR_stPatric.html
@@ -91,7 +91,7 @@
             description: "<b>【レプラコーン】</b><br>一人で黙々と靴を直す妖精。彼を捕まえれば黄金の場所を教えてくれますが、目を離した隙に逃げてしまう知恵者です。" 
         },
         "3": { 
-            name: "ダブリンの扉", lat: 35.6924, lng: 139.6971, arUrl: "#", 
+            name: "ダブリンの扉", lat: 35.6924, lng: 139.6971, arUrl: "https://palanar.com/ar_contents/ifo2026_1", 
             imgUrl: "https://images.unsplash.com/photo-1582234032482-628d7a868430?w=500", 
             description: "<b>【カラフルなドア】</b><br>18世紀から続くダブリンの伝統。隣の家と同じ色にならないように、住人たちが競って鮮やかな色を塗ったのが始まりです。" 
         },
