--- a/AR_stPatric.html
+++ b/AR_stPatric.html
@@ -57,7 +57,7 @@
 
 <div class="container">
     <div class="title-image-container">
-        <img src="logo.png" alt="Shamrock Rally Logo" class="title-image">
+        <img src="./logo.png" alt="Shamrock Rally Logo" class="title-image">
     </div>
     
     <div id="map"></div>
