Revise AR experience description and instructions
Updated text for AR experience instructions.

--- a/AR_stPatric.html
+++ b/AR_stPatric.html
@@ -62,8 +62,9 @@
 
     <p class="description">
         街を歩いてアイルランドの知恵を集めよう！<br>
-        「🔍詳細」で場所の由来や豆知識をチェック。<br>
-        目的地に着いたらスタンプを押してAR体験！
+        「🔍解説」で場所の由来や豆知識をチェック。<br>
+        9つのポイントをコンプリートして、最終ポイントのロックを解除。<br>
+        虹の向こう側にある特別な報酬（AR）を目指して、スロンチャ（乾杯）！<br>
     </p>
     
     <div id="map"></div>
