--- a/AR_stPatric.html
+++ b/AR_stPatric.html
@@ -60,12 +60,12 @@
         <img src="./logo.png" alt="Shamrock Rally Logo" class="title-image">
     </div>
 
-    <p class="description">
-        街を歩いてアイルランドの知恵を集めよう！<br>
-        「🔍解説」で場所の由来や豆知識をチェック。<br>
-        9つのポイントをコンプリートして、最終ポイントのロックを解除。<br>
-        虹の向こう側にある特別な報酬（AR）を目指して、スロンチャ（乾杯）！<br>
-    </p>
+  <div class="intro-text" style="text-align: center; padding: 10px; font-size: 0.9rem; line-height: 1.5; color: var(--dark-green);">
+    <p style="margin: 0; font-weight: bold;">街を巡ってARスタンプを集めよう！</p>
+    <p style="margin: 5px 0 0 0;">9つの知恵をコンプリートして、<br>
+        9つの知恵をコンプリートして、最終ポイントのロックを解除。<br>
+        虹の麓に隠されたゴールを目指せ！☘️</p>
+</div>
     
     <div id="map"></div>
     <div id="status">スタンプを集めよう！</div>
