--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -30,10 +30,9 @@
 
       <a-entity camera></a-entity>
     </a-scene>
-
-    <div style="position: fixed; bottom: 20px; width: 100%; text-align: center; z-index: 10;">
-      <p style="background: rgba(0,0,0,0.5); color: white; display: inline-block; padding: 10px; border-radius: 10px;">
-        上空を見上げて待ってみて！通り過ぎたら振り返ろう ☘️
+      <button onclick="history.back()" style="padding: 15px 30px; font-size: 18px; background: #009a49; color: white; border: none; border-radius: 50px; box-shadow: 0 4px 0 #00622d;">
+        ☘️ スタンプ台帳に戻る
+      </button>
       </p>
     </div>
   </body>
