--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -31,6 +31,7 @@
 
       <a-entity camera></a-entity>
     </a-scene>
+   <div style="position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); z-index: 10;">
       <button onclick="history.back()" style="padding: 15px 30px; font-size: 18px; background: #009a49; color: white; border: none; border-radius: 50px; box-shadow: 0 4px 0 #00622d;">
         ☘️ スタンプ台帳に戻る
       </button>
