--- a/AR_anime2.html
+++ b/AR_anime2.html
@@ -2,28 +2,48 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>AR North to South Flyby</title>
+    <title>St. Paddy's Sky Parade</title>
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   </head>
 
   <body style="margin: 0; overflow: hidden;">
-    <a-scene 
-      vr-mode-ui="enabled: false"
-      embedded 
-      arjs="sourceType: webcam; debugUIEnabled: false;">
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" vr-mode-ui="enabled: false">
       
-      <a-entity 
-        position="0 20 -150" 
-        animation="property: position; to: 0 20 300; dur: 30000; easing: linear; loop: true">
-        
-        <a-sphere scale="10 4 4" color="#ffffff" opacity="0.9">
-          <a-ring color="#009a49" radius-inner="0.48" radius-outer="0.5" rotation="0 90 0" scale="1 1 2.5"></a-ring>
+      <a-assets>
+        <a-mixin id="shark-move" animation="property: position; from: 0 15 -150; to: 0 15 300; dur: 30000; easing: linear; loop: true"></a-mixin>
+      </a-assets>
+
+      <a-entity mixin="shark-move" animation="delay: 0">
+        <a-sphere scale="12 4 6" color="#009a49" opacity="0.9">
+          <a-sphere position="0.5 0.8 0" radius="0.1" color="white"></a-sphere>
+          <a-sphere position="-0.5 0.8 0" radius="0.1" color="white"></a-sphere>
         </a-sphere>
-        <a-box position="0 -2.5 0" width="2" height="1" depth="4" color="#333"></a-box>
+        <a-box position="5 0 0" width="4" height="0.2" depth="2" color="#00622d" rotation="0 0 20"></a-box>
+        <a-box position="-5 0 0" width="4" height="0.2" depth="2" color="#00622d" rotation="0 0 -20"></a-box>
+        <a-box position="0 0 -6" width="0.2" height="6" depth="3" color="#00622d" rotation="0 0 0"></a-box>
+      </a-entity>
+
+      <a-entity mixin="shark-move" animation="delay: 5000" position="8 12 -150">
+        <a-sphere scale="8 3 4" color="#007a39"></a-sphere>
+        <a-box position="3 0 0" width="2" height="0.2" depth="1" color="#00522d"></a-box>
+      </a-entity>
+
+      <a-entity mixin="shark-move" animation="delay: 10000" position="-10 18 -150">
+        <a-sphere scale="10 3.5 5" color="#008a44"></a-sphere>
+        <a-box position="-4 0 0" width="3" height="0.2" depth="1.5" color="#00622d"></a-box>
+      </a-entity>
+
+      <a-entity position="0 20 -100" animation="property: rotation; to: 0 360 0; dur: 5000; easing: linear; loop: true">
+        <a-sphere position="15 0 0" radius="0.5" color="#ffcd00" material="emissive: #ffcd00; emissiveIntensity: 2"></a-sphere>
+        <a-sphere position="-12 5 0" radius="0.3" color="#ffffff" material="emissive: #ffffff"></a-sphere>
       </a-entity>
 
       <a-camera gps-camera rotation-reader></a-camera>
     </a-scene>
+
+    <div style="position: fixed; bottom: 20px; width: 100%; text-align: center; color: white; text-shadow: 1px 1px 2px black;">
+      北の空からジンベイザメのパレードがやってくる！☘️
+    </div>
   </body>
 </html>
