Add back button to AR_anime2.html
Replaced text with a button to navigate back.

--- a/AR_anime2.html
+++ b/AR_anime2.html
@@ -42,8 +42,9 @@
       <a-camera gps-camera rotation-reader></a-camera>
     </a-scene>
 
-    <div style="position: fixed; bottom: 20px; width: 100%; text-align: center; color: white; text-shadow: 1px 1px 2px black;">
-      北の空からジンベイザメのパレードがやってくる！☘️
-    </div>
+   <div style="position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); z-index: 10;">
+      <button onclick="history.back()" style="padding: 15px 30px; font-size: 18px; background: #009a49; color: white; border: none; border-radius: 50px; box-shadow: 0 4px 0 #00622d;">
+        ☘️ スタンプ台帳に戻る
+      </button>
   </body>
 </html>
