--- a/AR_anime1.html
+++ b/AR_anime1.html
@@ -5,6 +5,19 @@
     <title>AR Sky Parade: Whale Shark</title>
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <script>
+  // モデルが読み込まれたら実行されるイベント
+  document.querySelector('a-scene').addEventListener('model-loaded', (e) => {
+    const model = e.detail.model;
+    model.traverse((node) => {
+      // "shadow", "plane", "ground" という名前が含まれるパーツを隠す
+      if (node.name.toLowerCase().includes('shadow') || 
+          node.name.toLowerCase().includes('plane')) {
+        node.visible = false;
+      }
+    });
+  });
+</script>
   </head>
 
   <body style="margin: 0; overflow: hidden;">
